--- a/views/home.slim
+++ b/views/home.slim
@@ -1,45 +1,45 @@
-nav class="navbar navbar-inverse"
-  div class="container-fluid"
-    div class="navbar-header"
-      button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-        span class="sr-only" Toggle navigation
-        span class="icon-bar"
-        span class="icon-bar"
-        span class="icon-bar"
-      a class="navbar-brand" href="/home"
+nav.navbar.navbar-inverse
+  .container-fluid
+    .navbar-header
+      button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand href="/home"
         img alt="brand" src="/images/pinme.png"
 
-    div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
-      ul class="nav navbar-nav"
-        div class='dropdown'
-          button class='btn btn-default dropdown-toggle' type='button' id='dropdown-menu' data-toggle='dropdown' aria-expanded='true' 
-            i class='fa fa-bars'
+    .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
+      ul.nav.navbar-nav
+        .dropdown
+          button#dropdown-menu.btn.btn-default.dropdown-toggle type='button' data-toggle='dropdown' aria-expanded='true' 
+            i.fa.fa-bars
 
-      form id='main-searchbar' searchaction='/tourdata' method='get' class="navbar-form navbar-left" role="search"
-        div class="form-group"
-          input type="text" class="form-control" placeholder="Search" id='id' name='name'
-        button type="submit" class="btn btn-default" id='search-tour' Submit
+      form#main-searchbar.navbar-form.navbar-left searchaction='/tourdata' method='get' role="search"
+        .form-group
+          input#id.form-control type="text" placeholder="Search" name='name'
+        button#search-tour.btn.btn-default type="submit" Submit
 
-      ul class="nav navbar-nav navbar-right collapsing-element"
-        li class="dropdown"
-          a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"
-            span class="caret"
-          ul class="dropdown-menu" role="menu"
+      ul.nav.navbar-nav.navbar-right.collapsing-element
+        li.dropdown
+          a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-expanded="false"
+            span.caret
+          ul.dropdown-menu role="menu"
             li
-              a id='navbar-profile' href="#" Profile
+              a#navbar-profile href="#" Profile
             li
-              a class='settings-toggler' href="#" Settings
+              a.settings-toggler href="#" Settings
             li
               a href="/logout" Logout
-      p class="navbar-text navbar-right collapsing-element"
-        a href="#" class="navbar-link" #{@user.username}
-      a class="navbar-brand navbar-right collapsing-element" href="#"
+      p.navbar-text.navbar-right.collapsing-element
+        a.navbar-link href="#" #{@user.username}
+      a.navbar-brand.navbar-right.collapsing-element href="#"
         i.fa.fa-user
 
-div id='menu' class='col-md-2'
+#menu.col-md-2
   li role='presentation'
-    a role='menuitem' tabindex='-1' href='#' id='menu-map'
-      i class='fa fa-bookmark'
+    a#menu-map role='menuitem' tabindex='-1' href='#'
+      i.fa.fa-bookmark
       |  My Map
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' View Tours
@@ -56,22 +56,21 @@ div id='menu' class='col-md-2'
     a role='menuitem' tabindex='-1' href='/findtour' Search
     .turquoise-border 
     
-div id='map-canvas' class='col-md-12'
-div id='profile' class='col-md-10'
-  div id="profile-summary" class="col-md-4 panel panel-default"
+#map-canvas.col-md-12
+#profile.col-md-10
+  div#profile-summary.col-md-4.panel.panel-default
     img src="/images/profile_placeholder.png"
-    div class='panel-body'  
+    .panel-body  
       h2 = "#{@user.first_name} #{@user.last_name}"
       h4 Expert Tour Creator
       p Pellenteqsue elementum dapibus convalis elementum pellenteqsue tour.
-  div class="page-header" id="informationbox" class="col-md-7 col-md-offset-1 panel panel-default" style='background-color:white'
+  #informationbox.page-header.col-md-7.col-md-offset-1.panel.panel-default style='background-color:white'
     h1
       | #{@user.name} 
       small 2014-03-21
     p Mauris sit amet ex nibh. Suspendisse id iaculis risus. Suspendisse vel felis id felis maximus convallis id sed magna. Donec pellentesque purus a leo sollicitudin pellentesque. Nam ultrices massa at lectus pulvinar, ut euismod sapien cursus. Sed sodales commodo urna in varius. Pellentesque sodales nulla sed mattis viverra. Donec ultricies libero id leo venenatis tristique quis sed lorem. Sed ut sollicitudin metus. Ut egestas pellentesque nulla, ut tempus dui venenatis sed. Mauris malesuada mauris sed dui bibendum eleifend. Curabitur scelerisque aliquam lectus, eget mollis massa bibendum in. Proin sit amet mauris in nisl maximus volutpat ut eu eros. Duis elementum efficitur luctus. Nunc accumsan arcu id hendrerit tincidunt. Etiam iaculis ac nunc eget sagittis.
 
-div id='overlay' class='settings-toggler'
-
+#overlay.settings-toggler
 .panel.panel-default.col-md-8.col-md-offset-2 id='settings'
   .panel-heading Settings
   form action="/settings" method="POST"
