--- a/public/css/design.css
+++ b/public/css/design.css
@@ -11,13 +11,11 @@ html, body, #map-canvas {
 }
 
 body {
-  background-color: #313237;
 }
 
 #background {
-    background-color: #ffffff;
-    width :100%;
-    height: 100%;
+  width :100%;
+  height: 100%;
 }
 
 .hidden {
@@ -26,46 +24,35 @@ body {
 
 /* Dropdownmenu */
 
-#dropdown-menu {
-  background-color:#313237;
-}
-
 #menu {
-  background-color:#323232;
   padding-top:15px;
   height:100%;
   display:none;
   list-style-type:none;
+  background-color:#2C3E50;
 }
 
 #dropdown-menu {
   margin-top:7px;
 }
 
-.dropdown-menu li a, #menu li a {
+#menu li a {
+  margin-top:5;
+  margin-bottom:5;
   color:white;
-  margin-top:0;
-  margin-bottom:0;
+}
+
+#menu li a:hover {
+  color:#1BBC9C;
 }
 
 .dropdown-menu li a:hover, #menu li a:hover {
-  background-color:#293846;
-  color:white;
   text-decoration:none;
 }
 
 .dropdown-menu li a {
   padding-bottom:7px;
   padding-top:7px;
-}
-
-.turquoise-border {
-    content:"";
-    height:1px;
-    background-image:radial-gradient(#00D6D8, #313237), radial-gradient(#00D6D8, #313237);
-    background-position:0, 100%, 0, 100%;
-    margin-bottom:12.5px;
-    margin-top:12.5px;
 }
 
 .fa-bars:hover {
@@ -100,13 +87,11 @@ body {
 
 #profile {
   display: none;
-  color: black;
   margin-top: 10px;
 }
 
 #profile-summary{
   padding: 0;
-  background-color: white;
 }
 
 #profile-summary img {
@@ -129,14 +114,12 @@ body {
 #login-rectangle {
   width: 65%;
   height: 250px;
-  background-color: #43464B;
   float:left;
 }
 
 #status-rectangle {
   width: 35%;
   height: 250px;
-  background-color: #3B3E43;
   float:left;
   color:#D1D1D3;
 }
@@ -213,18 +196,9 @@ body {
 
 /* Navbar */
 
-.navbar-inverse {
-  background-color:#313237;
-  border-radius: 0px;
-  margin-bottom:0;
-}
-
-.navbar-inverse .navbar-link {
-  color:white;
-}
-
-.dropdown-menu, .dropdown-toggle[aria-expanded='true'] {
-  background-color: #313237 !important;
+.navbar {
+  margin-bottom:0px;
+  border-radius:0;
 }
 
 @media(max-width: 768px) {
@@ -259,7 +233,6 @@ body {
 #settings {
   position: fixed;
   top: 25%;
-  background-color: white;
   z-index: 101;
   display: none;
   padding: 0;
