--- a/views/home.slim
+++ b/views/home.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-inverse
+nav.navbar.navbar-default
   .container-fluid
     .navbar-header
       button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
@@ -7,34 +7,51 @@ nav.navbar.navbar-inverse
         span.icon-bar
         span.icon-bar
       a.navbar-brand href="/home"
-        img alt="brand" src="/images/pinme.png"
+        p PinMe
 
-    .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
-      ul.nav.navbar-nav
-        .dropdown
-          button#dropdown-menu.btn.btn-default.dropdown-toggle type='button' data-toggle='dropdown' aria-expanded='true' 
-            i.fa.fa-bars
 
-      form#main-searchbar.navbar-form.navbar-left searchaction='/tourdata' method='get' role="search"
-        .form-group
-          input#id.form-control type="text" placeholder="Search" name='name'
-        button#search-tour.btn.btn-default type="submit" Submit
+    ul.nav.navbar-nav.navbar-left.collapsing-element
+      li.dropdown
+        a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-expanded="false"
+          | Map
+          span.caret
+        ul.dropdown-menu role="menu"
+          li
+            a href="#" View Tours
+          li
+            a href="#" Search
 
-      ul.nav.navbar-nav.navbar-right.collapsing-element
-        li.dropdown
-          a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-expanded="false"
-            span.caret
-          ul.dropdown-menu role="menu"
-            li
-              a#navbar-profile href="#" Profile
-            li
-              a.settings-toggler href="#" Settings
-            li
-              a href="/logout" Logout
-      p.navbar-text.navbar-right.collapsing-element
-        a.navbar-link href="#" #{@user.username}
-      a.navbar-brand.navbar-right.collapsing-element href="#"
-        i.fa.fa-user
+    ul.nav.navbar-nav.navbar-left.collapsing-element
+      li.dropdown
+        a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-expanded="false"
+          | Tours
+          span.caret
+        ul.dropdown-menu role="menu"
+          li
+            a href="#" Create
+          li
+            a href="#" Search
+
+    form#main-searchbar.navbar-form.navbar-left searchaction='/tourdata' method='get' role="search"
+      .form-group
+        input#id.form-control type="text" placeholder="Search" name='name'
+      button#search-tour.btn.btn-primary type="submit" Submit
+
+    ul.nav.navbar-nav.navbar-right.collapsing-element
+      li.dropdown
+        a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-expanded="false"
+          | #{@user.username}
+          span.caret
+        ul.dropdown-menu role="menu"
+          li
+            a#navbar-profile href="#" Profile
+          li
+            a.settings-toggler href="#" Settings
+          li
+            a href="/logout" Logout
+
+    a.navbar-brand.navbar-right.collapsing-element href="#"
+      i.fa.fa-user
 
 #menu.col-md-2
   li role='presentation'
