--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,16 +1,16 @@
 doctype html
 html
   head
-    meta name="viewport" content="width=device-width, initial-scale=1"
+    meta name='viewport' content='width=device-width, initial-scale=1'
     link rel='stylesheet' type='text/css' href='/css/bootstrap.css'
     link rel='stylesheet' type='text/css' href='/css/design.css'
     link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
-    link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
+    link href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'
   body
     == yield
-    script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
-    script src="https://maps.googleapis.com/maps/api/js?v=3.exp"
-    script src="js/maps.js"
-    script src="js/bootstrap.js"
-    script src="js/menu.js"
-    script src="js/login.js"
+    script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
+    script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
+    script src='js/maps.js'
+    script src='js/bootstrap.js'
+    script src='js/menu.js'
+    script src='js/login.js'
