--- a/views/layout.slim
+++ b/views/layout.slim
@@ -7,6 +7,79 @@ html
     link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
     link href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'
   body
+    nav.navbar.navbar-default
+      .container-fluid
+        .navbar-header
+          button.navbar-toggle.collapsed type='button' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand href='/home'
+            p PinMe
+
+        
+        - if @user
+            ul.nav.navbar-nav.navbar-left.collapsing-element
+              li.dropdown
+                a.dropdown-toggle href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+                  | Map
+                  span.caret
+                ul.dropdown-menu role='menu'
+                  li
+                    a href='#' View Tours
+                  li
+                    a href='#' Search
+        - else
+          ul.nav.navbar-nav.navbar-left.collapsing-element
+            li.dropdown.disabled
+              a.dropdown-toggle.disabled href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+                | Map
+                span.caret
+        - if @user
+            ul.nav.navbar-nav.navbar-left.collapsing-element
+              li.dropdown
+                a.dropdown-toggle href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+                  | Tours
+                  span.caret
+                ul.dropdown-menu role='menu'
+                  li
+                    a href='#' Create
+                  li
+                    a href='#' Search
+        - else
+          ul.nav.navbar-nav.navbar-left.collapsing-element
+            li.dropdown.disabled
+              a.dropdown-toggle.disabled href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+                | Map
+                span.caret
+
+        form#main-searchbar.navbar-form.navbar-left searchaction='/tourdata' method='get' role='search'
+          .form-group
+            input#id.form-control type='text' placeholder='Search' name='name'
+          - if @user
+            button#search-tour.btn.btn-primary type='submit' Submit
+          - else
+            button#search-tour.btn.btn-primary.disabled type='submit' Submit
+
+        - if @user
+            ul.nav.navbar-nav.navbar-right.collapsing-element
+              li.dropdown
+                a.dropdown-toggle href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+                  | #{@user.username}
+                  span.caret
+                ul.dropdown-menu role='menu'
+                  li
+                    a href="/profile/#{@user.username}" Profile
+                  li
+                    a.settings-toggler href='#' Settings
+                  li
+                    a href='/logout' Logout
+            a.navbar-brand.navbar-right.collapsing-element href='#'
+                i.fa.fa-user
+        - else 
+            a.navbar-brand.navbar-right.collapsing-element href="/login" Login        
+
     == yield
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
     script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
