--- a/public/css/design.css
+++ b/public/css/design.css
@@ -13,17 +13,31 @@ html, body, #map-canvas {
 body {
 }
 
-#background {
-  width :100%;
-  height: 100%;
+.flash-error {
+  background-color: #C83F38;
+  color:white;
+  text-align:center;
 }
 
 .hidden {
   visibility: hidden;
 }
 
+.visible {
+  visibility:visible;
+}
+
+
 .center-text {
   text-align:center;
+}
+
+.fa-bars:hover {
+  color:white;
+}
+
+.fa-bars {
+  color:white;
 }
 
 /* Dropdownmenu */
@@ -59,13 +73,6 @@ body {
   padding-top:7px;
 }
 
-.fa-bars:hover {
-  color:white;
-}
-
-.fa-bars {
-  color:white;
-}
 
 /* Findtour */
 
@@ -114,18 +121,6 @@ body {
 }
 
 /* Login */
-#login-rectangle {
-  width: 65%;
-  height: 250px;
-  float:left;
-}
-
-#status-rectangle {
-  width: 35%;
-  height: 250px;
-  float:left;
-  color:#D1D1D3;
-}
 
 #header {
   margin-top:0;
@@ -139,74 +134,8 @@ body {
   z-index:-1;
 }
 
-.main-block {
-  margin-top: 150px;
-  width: 40%;
-}
-
-#status-rectangle #info {
-  margin-top: 37px;
-}
-
-#login-button {
-  margin-top: 40px;
-  background-color: #11ABB7;
-  color: white;
-  border: 0px;
-  width: 100%;
-}
-
-#register-button {
-  margin-top: 68px;
-  background-color: #11ABB7;
-  color: white;
-  border: 0px;
-  width: 100%;
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.visible {
-  visibility: visible;
-}
-
-#register-rectangle .input {
-  margin-bottom: 10px;
-  margin-left: 2%;
-  width: 90%;
-  float:left;
-}
-
-#register-rectangle .login-rectangle {
-  background-color: #51555c;
-}
-
-#register-form {
-  width: 65%;
-}
-
-#create-account-button {
-  margin-top: 40px;
-  background-color: #11ABB7;
-  color: white;
-  border: 0px;
-  width: 100%;
-}
-
-#create-rectangle {
-  width: 35%;
-  height: 250px;
-  background-color: #3B3E43;
-  float:left;
-  color:#D1D1D3;
-}
-
-.flash-error {
-  background-color: #C83F38;
-  color:white;
-  text-align:center;
+#register-rectangle {
+  display:none;
 }
 
 /* Navbar */
@@ -243,6 +172,11 @@ body {
   background-color: black;
   opacity: 0.5;
   display: none;
+}
+
+#background {
+  width :100%;
+  height: 100%;
 }
 
 #settings {
