--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,7 +4,7 @@ html
     meta name='viewport' content='width=device-width, initial-scale=1'
     link rel='stylesheet' type='text/css' href='/css/bootstrap.css'
     link rel='stylesheet' type='text/css' href='/css/design.css'
-    link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
+    link href='http://fonts.googleapis.com/css?family=Raleway:400,700,300' rel='stylesheet' type='text/css'
     link href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'
   body
     nav.navbar.navbar-default
@@ -78,8 +78,7 @@ html
                 i.fa.fa-user
         - else 
             ul.nav.navbar-nav.navbar-right
-              li
-                a href="/login" Login      
+              
 
     == yield
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
