--- a/views/layout.slim
+++ b/views/layout.slim
@@ -78,7 +78,14 @@ html
                 i.fa.fa-user
         - else 
             ul.nav.navbar-nav.navbar-right
-              
+              li.dropdown
+                a#navlogin.dropdown-toggle href='#' data-toggle='dropdown' Login
+                .dropdown-menu
+                  form.form action='/login' method='post'
+                    input#username name='username' type='text' placeholder='Username'
+                    input#password name='password' type='password' placeholder='Password'
+                    button.btn.btn-primary type='submit' Log in
+                    a.btn.btn-info href='/login' Register
 
     == yield
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
