--- a/views/login.slim
+++ b/views/login.slim
@@ -6,6 +6,23 @@
     p
       #register-button.btn.btn-primary.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2.col-xs-10.col-xs-offset-1 href='#option-panel' role='button'  Become a member today!
 
+#advertisement-banner.col-md-12.col-xs-12
+  h4.center-text KEY FEATURES
+
+#features.col-md-10.col-md-offset-1
+  .col-md-4
+    i.fa.fa-pencil.fa-4x.col-md-6.col-md-offset-3
+    h3 User Tailored
+    p Praesent eget massa turpis. Sed quam nisi, varius tempor diam quis, auctor iaculis nunc.
+  .col-md-4
+    i.fa.fa-users.fa-4x.col-md-6.col-md-offset-3
+    h3 By users, for users
+    p Eu sagittis tortor enim sit amet nibh. Sed sed iaculis odio, eu tristique velit. 
+  .col-md-4
+    i.fa.fa-location-arrow.fa-4x.col-md-6.col-md-offset-3
+    h3 Map Guided Tours
+    p Praesent eget massa turpis. Sed quam nisi, varius tempor diam quis, auctor iaculis nunc.
+
 #register-rectangle.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2.col-xs-12
   form action='/register' method='post' style='margin-top:21px;'
     .input-group.input
