--- a/views/layout.slim
+++ b/views/layout.slim
@@ -88,6 +88,42 @@ html
                     a.btn.btn-info href='/login' Register
 
     == yield
+    #footer.col-md-12
+      footer.footer-distributed
+        .col-md-4
+          h3
+            | PinMe
+          p.footer-links
+            a href="/home"  Home ·
+            a href="#"  About ·
+            a href="#"  Faq ·
+            a href="#"  Contact
+          p.footer-company-name PinMe &copy; 2015
+        #pinme-info
+          .col-md-4.col-xs-12
+            .col-md-12
+              i.fa.fa-map-marker
+              | #{' Röntgenvägen 19, Sweden'}
+            .col-md-12
+              i.fa.fa-phone
+              | #{' +1 555 P1NM3'}
+            .col-md-12
+              i.fa.fa-envelope
+                a href="mailto:pinme@pinme.??" #{' pinme@pinme.com'}
+        .col-md-4.col-sm-12
+          p.footer-company-about
+            h4 About the company
+            | Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus.
+          .col-md-4.col-xs-4
+            a href='#' 
+              i.fa.fa-facebook.fa-3x
+          .col-md-4.col-xs-4
+            a href='#' 
+              i.fa.fa-twitter.fa-3x
+          .col-md-4.col-xs-4
+            a href='#' 
+              i.fa.fa-github.fa-3x
+
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
     script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
     script src='js/maps.js'
