--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,7 +16,7 @@ html
             span.icon-bar
             span.icon-bar
           a.navbar-brand href='/home'
-            p PinMe
+            p.cursive PinMe
 
         - if @user
             ul.nav.navbar-nav.navbar-left.collapsing-element
@@ -77,14 +77,14 @@ html
     #footer.col-md-12
       footer.footer-distributed
         .col-md-4
-          h3
+          h3.cursive
             | PinMe
           p.footer-links
             a href="/home"  Home ·
             a href="#"  About ·
             a href="#"  Faq ·
             a href="#"  Contact
-          p.footer-company-name PinMe &copy; 2015
+          p.footer-company-name &copy; 2015
         #pinme-info
           .col-md-4.col-xs-12
             .col-md-12
