--- a/views/login.slim
+++ b/views/login.slim
@@ -1,7 +1,7 @@
 #header.col-md-12
   img#header-image src='images/login-panel-image.jpg'
   .jumbotron.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2.col-xs-12 style='background-color:transparent;' 
-    h1.center-text style="color:white;"  PinMe
+    h1.center-text.cursive style="color:white;"  PinMe
     p.center-text The easiest way to explore the world
     p
       #register-button.btn.btn-primary.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2.col-xs-10.col-xs-offset-1 href='#option-panel' role='button'  Become a member today!
