--- a/views/layout.slim
+++ b/views/layout.slim
@@ -98,18 +98,9 @@ html
                 a href="mailto:pinme@pinme.??" #{' pinme@pinme.com'}
         .col-md-4.col-sm-12
           p.footer-company-about
-            h4 About the company
+            h4 About us
             | Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus.
-          .col-md-4.col-xs-4
-            a href='#' 
-              i.fa.fa-facebook.fa-3x
-          .col-md-4.col-xs-4
-            a href='#' 
-              i.fa.fa-twitter.fa-3x
-          .col-md-4.col-xs-4
-            a href='#' 
-              i.fa.fa-github.fa-3x
-
+  
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
     script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
     script src='js/enquire.min.js'
