--- a/views/layout.slim
+++ b/views/layout.slim
@@ -62,7 +62,8 @@ html
                     a href='/logout' Logout
             a.navbar-brand.navbar-right.collapsing-element href='#'
                 i.fa.fa-user
-        - else 
+        - else
+          #login 
             ul.nav.navbar-nav.navbar-right
               li.dropdown
                 a#navlogin.dropdown-toggle href='#' data-toggle='dropdown' Login
