--- a/public/css/design.css
+++ b/public/css/design.css
@@ -117,6 +117,10 @@ html, body, #map-canvas {
   color:white;
 }
 
+#login h3 {
+  margin-top:5px;
+}
+
 @media(max-width: 990px) {
   #features h3 {
     margin-top:20px;
