--- a/views/layout.slim
+++ b/views/layout.slim
@@ -68,9 +68,16 @@ html
                 li.dropdown
                   a#navlogin.dropdown-toggle href='#' data-toggle='dropdown' Login
                   .dropdown-menu
+                    h3.text-center Login
                     form.form action='/login' method='post'
-                      input#username name='username' type='text' placeholder='Username'
-                      input#password name='password' type='password' placeholder='Password'
+                      .input-group.input
+                        span.input-group-addon
+                          i.fa.fa-user
+                        input#username name='username' type='text' placeholder='Username'
+                      .input-group.input
+                        span.input-group-addon
+                          i.fa.fa-cog
+                        input#password name='password' type='password' placeholder='Password'
                       button.btn.btn-primary type='submit' Log in
                       a.btn.btn-info href='/login' Register
 
