Renamed dropdown options

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -37,9 +37,9 @@ html
                     span.caret
                   ul.dropdown-menu role='menu'
                     li
-                      a href='#' Create
+                      a href='#' View
                     li
-                      a href='#' Search
+                      a href='#' Create
           - if @user
             form#main-searchbar.navbar-form.navbar-left searchaction='/tourdata' method='get' role='search'
               .form-group
