Added tour list page Fixes #104

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -37,7 +37,7 @@ html
                     span.caret
                   ul.dropdown-menu role='menu'
                     li
-                      a href='#' View
+                      a href='/tours/all' View
                     li
                       a href='#' Create
           - if @user
