--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,6 +4,7 @@ html
     meta name='viewport' content='width=device-width, initial-scale=1'
     link rel='stylesheet' type='text/css' href='/css/bootstrap.css'
     link rel='stylesheet' type='text/css' href='/css/design.css'
+    link rel='stylesheet' type='text/css' href='/css/jquery.dataTables.min.css'
     link href='http://fonts.googleapis.com/css?family=Raleway:400,700,300' rel='stylesheet' type='text/css'
     link href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'
   body
@@ -104,8 +105,11 @@ html
   
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
     script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
-    script src='js/enquire.min.js'
-    script src='js/maps.js'
-    script src='js/bootstrap.js'
-    script src='js/menu.js'
-    script src='js/login.js'
+    script src='/js/jquery.dataTables.min.js'
+    script src='/js/bootstrap.js'
+    script src='/js/enquire.min.js'
+    script src='/js/maps.js'
+    script src='/js/bootstrap.js'
+    script src='/js/menu.js'
+    script src='/js/login.js'
+    script src='/js/tours.js'
