--- a/views/login.slim
+++ b/views/login.slim
@@ -23,16 +23,16 @@
     p Praesent eget massa turpis. Sed quam nisi, varius tempor diam quis, auctor iaculis nunc.
 
 .col-md-6.col-md-offset-3
-  -if flash[:error]
+  -if flash[:regerror]
     .panel.panel-danger style='margin-top:50px;'
       .panel-heading
         h3.panel-title Something went wrong!
       .panel-body
-        - if flash[:error].is_a? Array
-          - for error in flash[:error]
+        - if flash[:regerror].is_a? Array
+          - for error in flash[:regerror]
             p #{error}
         - else
-          p #{flash[:error]}
+          p #{flash[:regerror]}
 
 #register-rectangle.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2.col-xs-12
   .panel.panel-primary
