Adjusted overlays referral path Fixes #111

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -27,7 +27,7 @@ html
                   span.caret
                 ul.dropdown-menu role='menu'
                   li
-                    a href='#' View Tours
+                    a href='/savedtours' View Tours
                   li
                     a href='#' Search
           - if @user
