Renamed panel heading

--- a/views/tour.slim
+++ b/views/tour.slim
@@ -36,6 +36,6 @@
         
         .panel.panel-primary
           .panel-heading
-            h2.center-text = @tour.name
+            h2.center-text Description
           .panel-body
             p = @tour.description
