Removed unused dropdown option

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -27,9 +27,7 @@ html
                   span.caret
                 ul.dropdown-menu role='menu'
                   li
-                    a href='/savedtours' View Tours
-                  li
-                    a href='#' Search
+                    a href='/savedtours' Saved Tours
           - if @user
             ul.nav.navbar-nav.navbar-left.collapsing-element
               li.dropdown
