Showing pins instead of lines

--- a/views/tours.slim
+++ b/views/tours.slim
@@ -17,4 +17,4 @@
           td = tour.name
           td = tour.description
           td = tour.rating
-          td = tour.lines.size
+          td = tour.pins.size
